# perseus_bug_report

./: Cargo.toml  README.md
src/: main.rs
src/templates/: about.rs  global.rs  index.rs  mod.rs
static/css/: styles.css
static/js/: toggle.js
translations/: en-US.ftl  fr-FR.ftl
